--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -54,7 +54,7 @@ label{
 }
 
 .main{
-	background: url('../img/pexels-photo-545049.jpg') no-repeat;
+	background: url('../img/yichunyueyuan.jpg') no-repeat;
 	background-repeat:no-repeat;
     background-size: cover;
 	min-height: 40rem;
